--- a/p1.html
+++ b/p1.html
@@ -1,5 +1,5 @@
 <!--HTML file for to-do list project-->
-<!--Developed by Rakshan A Jain, Vaidik S Prabhu and Suraj Pai K-->
+<!--Developed by Suraj Pai K-->
 
 <!DOCTYPE html>
 
